// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ERC20ContractAnalytics.vue > Should display contract analytics with bignumber formatted amounts 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-row">
    <div class="v-col v-col-3 pb-0">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary"></div>
                <div class="v-progress-linear__buffer bg-primary" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-0">
                <!---->Time Range
              </label>
              <!---->
              <div class="v-field__input" data-no-activator="">
                <!---->
                <!---->
                <div class="v-select__selection"><span class="v-select__selection-text">14 Days<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="14">
              </div>
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                  <!---->Time Range
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="v-row">
    <div class="v-col-md-6 v-col-12">
      <line-chart-stub title="Transfer Volume" tooltipunit="transfer" index="1" xlabels="0,1" data="2,2"></line-chart-stub>
    </div>
    <div class="v-col-md-6 v-col-12">
      <line-chart-stub title="Circulating Supply" tokensymbol="ETL" index="2" xlabels="0,1" data="0.2,0.3"></line-chart-stub>
    </div>
    <div class="v-col-md-6 v-col-12">
      <line-chart-stub title="Token Holder History" tooltipunit="holder" index="3" xlabels="0,1" data="2,2"></line-chart-stub>
    </div>
  </div>
</div>"
`;

exports[`ERC20ContractAnalytics.vue > Should display contract analytics without bignumber formatted amount 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-row">
    <div class="v-col v-col-3 pb-0">
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background bg-primary"></div>
                <div class="v-progress-linear__buffer bg-primary" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long bg-primary"></div>
                    <div class="v-progress-linear__indeterminate short bg-primary"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-0">
                <!---->Time Range
              </label>
              <!---->
              <div class="v-field__input" data-no-activator="">
                <!---->
                <!---->
                <div class="v-select__selection"><span class="v-select__selection-text">14 Days<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="14">
              </div>
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                  <!---->Time Range
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="v-row">
    <div class="v-col-md-6 v-col-12">
      <line-chart-stub title="Transfer Volume" tooltipunit="transfer" index="1" xlabels="0,1" data="2,2"></line-chart-stub>
    </div>
    <div class="v-col-md-6 v-col-12">
      <line-chart-stub title="Circulating Supply" tokensymbol="ETL" index="2" xlabels="0,1" data="2,3"></line-chart-stub>
    </div>
    <div class="v-col-md-6 v-col-12">
      <line-chart-stub title="Token Holder History" tooltipunit="holder" index="3" xlabels="0,1" data="2,2"></line-chart-stub>
    </div>
  </div>
</div>"
`;
